# enjen

./: .gitignore  CMakeLists.txt  build-libs.sh  build-linux.sh  build-osx.sh  build-win.sh  build.sh  clean.sh  conanfile.txt  dep-build.sh  run.sh  win-build.sh
install_root/: config.json
install_root/cfg/: config.json
install_root/shaders/fragment/: default.glsl
install_root/shaders/vertex/: default.glsl
src/: Enjen.cpp  Enjen.h  main.cpp
src/core/: Cfg.cpp  Cfg.h  Controller.cpp  Controller.h  Input.cpp  Input.h  Renderer.cpp  Renderer.h  Runtime.cpp  Runtime.h
src/graphics/: ShaderProgram.cpp  ShaderProgram.h
